--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
   
   <div class="experience-card">
-    <img src="img/Ann.png" alt="CSE">
+    <img src="img/UM_Dearborn_logo.png" alt="CSE">
     <br>
     <div class="card-header">Undergraduate Student Researcher</div>
     <div class="card-date">Aug. 2023 - Mar 2024</div>
@@ -194,7 +194,7 @@
 </div>
 
 <div class="experience-card">
-  <img src="img/Ann.png" alt="CSE">
+  <img src="img/UM_Dearborn_logo.png" alt="CSE">
   <br>
   <div class="card-header">TUTOR II (TEMP) CECS SI Leader</div>
   <div class="card-date">Sept. 2021 - Sept. 2023 </div>
@@ -240,7 +240,7 @@
       </div>
 
       <div class="experience-card">
-        <img src="img/Ann.png" alt="CSE">
+        <img src="img/UM_Dearborn_logo.png" alt="CSE">
         <div class="card-header">University of Michigan @ Dearborn </div>
         <div class="card-body">
           <p>Fall 2020 - Winter 2024</p>
@@ -252,7 +252,7 @@
 
       
       <div class="experience-card">
-        <img src="img/Ann.png" alt="CSE">
+        <img src="img/occ.png" alt="CSE">
         <div class="card-header">Oakland Community College </div>
         <div class="card-body">
           <p>Fall 2018 - Summer 2020</p>
