--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           I have lived in Michigan my entire life and have a love for full-stack development and hackathons. Currently, I am supported by the Rackham Merit Fellowship.
         </p>
         <p>
-            Feel free to contact me through LinkedIn or at larnell at umich dot edu! 
+            Feel free to contact me through LinkedIn or at larnell@umich.edu! 
            </p>
 
            
