--- a/projects.html
+++ b/projects.html
@@ -424,7 +424,7 @@
       </a>
       <div class="navbar-links" id="navbar-links">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index">Home</a></li>
             <li><a href="projects">Research+Projects</a></li>
         </ul>
       </div>
