--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </a>
       <div class="navbar-links" id="navbar-links">
         <ul>
-          <li><a href="index">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="projects">Research+Projects</a></li>
         </ul>
       </div>
