--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <!-- Hero Content -->
       <div class="hero-content">
         <div class="intro">
-          <h1 class="display-2" id="typed-name"><span>&#128153;</span>G</h1>
+          <h1 class="display-2" id="typed-name"><span>&#128153;G</span></h1>
           <h2>&#128513; Passionate AI PhD CSE Student </h2>
           <p>
             I am a passionate, high-achieving PhD student in CSE at the University of Michigan. My advisor is Rada Mihalcea, and I work in the LIT lab.
