--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         <div class="card-body">
           <p>Aug. 2024 - Present</p>
           <p>PhD in Computer Science </p>
-          <p> Unweighted GPA: TBA  </p>
+          <p> Unweighted GPA: 4.00/4.00  </p>
        
         </div>
       </div>
