--- a/projects.html
+++ b/projects.html
@@ -425,7 +425,7 @@
       <div class="navbar-links" id="navbar-links">
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="projects">Research+Projects</a></li>
+            <li><a href="projects">Research & Projects</a></li>
         </ul>
       </div>
     </nav>
