--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
       <div class="hero-content">
         <div class="intro">
           <h1 class="display-2" id="typed-name"><span class="heart">&#128153;</span>G</h1>
-          <h2>Passionate AI PhD CSE Student &#128526;  </h2>
+          <h2>Passionate AI PhD Student &#128526 </h2>
           <p>
-            &#128075; Welcome to my domain! I am an ambitious, high-achieving</span> PhD student studying  
+            &#128075; Welcome to my domain! I am an ambitious, high-achieving</span> PhD student in CSE studying  
             <span style="color: #57fafa;">Natural Language Processing</span> & 
             <span style="color: #57fafa;">Machine Learning </span> at the prestigious
             <span style="color: #fbff05">University of Michigan</span>. I work in the 
@@ -105,16 +105,16 @@
           </p>
           <p>
             I aspire to become a skilled applied 
-            <span style="color: #607D8B;">AI/ML researcher</span> to help democratize education and for societal good.
+            <span style="color: #57fafa;">AI/ML researcher </span> to help democratize education and for societal good.
           </p>
           <p>
-            I have lived in <span style="color: #F44336;">Michigan</span> my entire life and have a love for 
-            <span style="color: #CDDC39;">full-stack development</span> and 
-            <span style="color: #00BCD4;">hackathons</span>. Currently, I am supported by the 
-            <span style="color: #FFC107;">Rackham Merit Fellowship</span>.
+            I have lived in Michigan</span> my entire life and have a love for 
+            <span style="color: #57fafa;">full-stack development</span> and
+            <span style="color: #57fafa;">hackathons</span>. Currently, I am supported by the 
+            <span style="color:#fbff05">Rackham Merit Fellowship</span>.
           </p>
           <p>
-            Feel free to contact me through LinkedIn or at larnell@umich.edu for any professional inquiries or advice! 
+            Feel free to contact me through LinkedIn or at larnell@umich.edu for any  <span style="color: #57fafa;">professional inquiries or advice</span>. 
           </p>
 
            
