--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="hero-content">
         <div class="intro">
           <h1 class="display-2" id="typed-name"><span class="heart">&#128153;</span>G</h1>
-          <h2>Passionate PhD Student &#128526</h2>
+          <h2>Passionate PhD Student</h2>
           <p>
             &#128075; Welcome to my domain! I am an ambitious, high-achieving</span> PhD student in CSE studying  
             <span style="color: #57fafa;">Natural Language Processing</span> & 
