--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <div class="intro">
           <h1 class="display-2" id="typed-name"><span class="heart">&#128153;</span>G</h1>
           <h2>Passionate PhD Student</h2>
+          <img src="img/me2.png" alt="Larnell Moore" class="mobile-profile-pic">
           <p>
             &#128075; Welcome to my domain! I am an ambitious, high-achieving</span> PhD student in CSE studying  
             <span style="color: #57fafa;">Natural Language Processing</span> & 
