--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Author: Larnell Moore -->
 <!-- Creation Date: Feb 2, 2024-->
 <!-- Modificatioon Date: Dec 11, 2024-->
-<!-- Purpose: -->
+<!-- Purpose: This website was created from scratch by Larnell Moore. -->
   <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="exp.css">
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="hero-section.css">
+    <link rel="stylesheet" href="footer.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -40,7 +41,7 @@
         padding-bottom: 60%; /* Adjust this to control the height */
         position: relative;
 
-        margin-top: 20px; /* Add margin to create space below the heading */
+        margin-top: 30px; /* Add margin to create space below the heading */
         border: 12px solid #2F65A7; /* Add this line to set the border color */
         box-shadow: #fff;
       }
@@ -71,6 +72,10 @@
       }
     </style>
   </head>
+<link rel="apple-touch-icon" sizes="180x180" href="img/CSE_ICONS/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/CSE_ICONS/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/CSE_ICONS/favicon-16x16.png">
+<link rel="manifest" href="img/CSE_ICONS/site.webmanifest">
   <body>
     <!-- Navigation -->
     <nav class="navbar">
@@ -285,8 +290,6 @@
 <br>
 <br>
     </div>
-    
-
     <hr>
 
     <!-- Curriculum Vitae Section -->
@@ -300,6 +303,7 @@
         <iframe src="https://drive.google.com/file/d/1rPE0T_9Sgd9AahdabRnq2dE5akb_5oLw/preview"></iframe>
       </div>
     </div>
+
 <!-- Modal Structure -->
 <div id="expmodal" class="expmodal">
   <div class="expmodal-content">
@@ -314,6 +318,32 @@
   </div>
 </div>
 
- 
+<hr>
+<footer>
+  <div class="CSEIcon">
+    <img src="img/CSELOGO.png" alt="Null">
+</div>
+
+  <div class="footerContainer">
+      <div class="socialIcons">
+        <a href="https://github.com/LuffyAI" title="Github" class="icon-link">
+          <i class="fab fa-github fa-2x"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/larnell-m-8a0a04183/" title="LinkedIn" class="icon-link">
+          <i class="fab fa-linkedin fa-2x"></i>
+        </a>
+        <a href="mailto:larnell@umich.edu" title="Email" class="icon-link">
+          <i class="fas fa-envelope fa-2x"></i>
+        </a>
+        <a href="https://scholar.google.com/citations?user=bDP9hvQAAAAJ&hl=en" title="Google Scholar" class="icon-link">
+          <i class="fas fa-graduation-cap fa-2x"></i>
+        </a>
+      </div>
+  </div>
+  <div class="footerBottom">
+    <p> Privacy Policy </span></p>
+      <p>© 2024 Larnell Moore. This work is licensed under CC BY NC ND 4.0. </span></p>
+  </div>
+</footer>
   </body>
 </html>
