--- a/projects.html
+++ b/projects.html
@@ -709,8 +709,33 @@ function closeModal() {
     <!-- JavaScript Files -->
    
   
-</body>
-</html>
+<hr>
+<footer>
+  <div class="CSEIcon">
+    <img src="img/CSELOGO.png" alt="Null">
+</div>
+
+  <div class="footerContainer">
+      <div class="socialIcons">
+        <a href="https://github.com/LuffyAI" title="Github" class="icon-link">
+          <i class="fab fa-github fa-2x"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/larnell-m-8a0a04183/" title="LinkedIn" class="icon-link">
+          <i class="fab fa-linkedin fa-2x"></i>
+        </a>
+        <a href="mailto:larnell@umich.edu" title="Email" class="icon-link">
+          <i class="fas fa-envelope fa-2x"></i>
+        </a>
+        <a href="https://scholar.google.com/citations?user=bDP9hvQAAAAJ&hl=en" title="Google Scholar" class="icon-link">
+          <i class="fas fa-graduation-cap fa-2x"></i>
+        </a>
+      </div>
+  </div>
+  <div class="footerBottom">
+    <p> Privacy Policy </span></p>
+      <p>© 2024 Larnell Moore. This work is licensed under CC BY NC ND 4.0. </span></p>
+  </div>
+</footer>
 
 </body>
 </html>
