--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap4-neon-glow.min.css">
     <link rel="stylesheet" href="navbar.css">
     <link rel="stylesheet" href="hero-section.css">
+    <link rel="stylesheet" href="footer.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
