--- a/projects.html
+++ b/projects.html
@@ -413,6 +413,10 @@
         }
     </style>
 </head>
+<link rel="apple-touch-icon" sizes="180x180" href="img/CSE_ICONS/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="img/CSE_ICONS/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="img/CSE_ICONS/favicon-16x16.png">
+<link rel="manifest" href="img/CSE_ICONS/site.webmanifest">
 
 <body>
     <!-- Navigation -->
@@ -709,6 +713,7 @@ function closeModal() {
     
     <!-- JavaScript Files -->
    
+<br>
 <br>
 <hr>
 <footer>
