--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
     <style>
        /* Adjust iframe container for CV to show only one page at a time */
-       .cv-container {
+      .cv-container {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         width: 100%;
-        padding-bottom: 10%;
+        padding-bottom: 3%;
       }
   
       .iframe-container {
@@ -68,6 +68,15 @@
   
         .iframe-container iframe {
           zoom: 0.65; /* Adjust zoom to fit one page on smaller screens */
+        }
+
+          .cv-container {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          padding-bottom: 10%;
         }
       }
     </style>
