--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 60%; /* Control the width */
+        height: 30%;
+        width: 50%; /* Control the width */
         padding-bottom: 60%; /* Adjust this to control the height */
         position: relative;
 
